Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9206

Server crashes on shutdown on Windows under Application Verifier

Details

    Description

      The fix for MDEV-8738 appears to be in the log, but it crashes anyway.

       	vrfcore.dll!000007fee66038b2()	Unknown
       	vfbasics.dll!000007fee64ab93d()	Unknown
       	vfbasics.dll!000007fee64abb5b()	Unknown
      >	mysqld.exe!_current_thd() Line 761	C++
       	mysqld.exe!my_malloc_size_cb_func(__int64 size, char is_thread_specific) Line 4001	C++
       	mysqld.exe!update_malloc_size(__int64 size, char is_thread_specific) Line 68	C
       	mysqld.exe!my_free(void * ptr) Line 216	C
       	mysqld.exe!operator delete(void * ptr) Line 53	C++
       	mysqld.exe!std::allocator<std::_Container_proxy>::deallocate(std::_Container_proxy * _Ptr, unsigned __int64 __formal) Line 587	C++
       	mysqld.exe!std::_Vector_alloc<0,std::_Vec_base_types<defrag_pool_item_t,std::allocator<defrag_pool_item_t> > >::_Free_proxy() Line 641	C++
       	mysqld.exe!std::_Vector_alloc<0,std::_Vec_base_types<defrag_pool_item_t,std::allocator<defrag_pool_item_t> > >::~_Vector_alloc<0,std::_Vec_base_types<defrag_pool_item_t,std::allocator<defrag_pool_item_t> > >() Line 614	C++
       	mysqld.exe!std::vector<defrag_pool_item_t,std::allocator<defrag_pool_item_t> >::~vector<defrag_pool_item_t,std::allocator<defrag_pool_item_t> >() Line 901	C++
       	mysqld.exe!`dynamic atexit destructor for 'defrag_pool''()	C++
       	mysqld.exe!doexit(int code, int quick, int retcaller) Line 584	C
       	mysqld.exe!exit(int code) Line 395	C
       	mysqld.exe!mysqld_exit(int exit_code) Line 2078	C++
       	mysqld.exe!unireg_abort(int exit_code) Line 2046	C++
       	mysqld.exe!init_server_components() Line 5279	C++
       	mysqld.exe!win_main(int argc, char * * argv) Line 5802	C++
       	mysqld.exe!mysql_service(void * p) Line 6050	C++
       	mysqld.exe!mysqld_main(int argc, char * * argv) Line 6243	C++
       	mysqld.exe!main(int argc, char * * argv) Line 26	C++
       	mysqld.exe!__tmainCRTStartup() Line 240	C
       	mysqld.exe!mainCRTStartup() Line 164	C
       	kernel32.dll!00000000775559ed()	Unknown
       	ntdll.dll!000000007778c541()	Unknown

      Appverifier says:

      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
      <avrf:logfile xmlns:avrf="Application Verifier">
      	<avrf:logSession TimeStarted="2015-11-27 : 03:33:01" PID="667780" Version="2">
      		<avrf:logEntry Time="2015-11-27 : 03:34:21" LayerName="TLS" StopCode="0x352" Severity="Error">
      			<avrf:message>Using an invalid TLS index.</avrf:message>
      			<avrf:parameter1>cabba - TLS index</avrf:parameter1>
      			<avrf:parameter2>0 - Not Used.</avrf:parameter2>
      			<avrf:parameter3>0 - Not Used.</avrf:parameter3>
      			<avrf:parameter4>0 - Not Used.</avrf:parameter4>
      			<avrf:stackTrace>
      				<avrf:trace>vfbasics!+7feeea1ac9d ( @ 0)</avrf:trace>
      				<avrf:trace>vfbasics!+7feeea1aeef ( @ 0)</avrf:trace>
      				<avrf:trace>mysqld!my_malloc_size_cb_func+1c (c:\buildbot\bbwin1\win-rqg-se\build\sql\mysqld.cc @ 4003)</avrf:trace>
      				<avrf:trace>mysqld!update_malloc_size+12 (c:\buildbot\bbwin1\win-rqg-se\build\mysys\my_malloc.c @ 68)</avrf:trace>
      				<avrf:trace>mysqld!my_free+2f (c:\buildbot\bbwin1\win-rqg-se\build\mysys\my_malloc.c @ 216)</avrf:trace>
      				<avrf:trace>mysqld!`dynamic atexit destructor for &apos;crypt_info&apos;&apos;+62 ( @ 0)</avrf:trace>
      				<avrf:trace>mysqld!doexit+cd (f:\dd\vctools\crt_bld\self_64_amd64\crt\src\crt0dat.c @ 567)</avrf:trace>
      				<avrf:trace>mysqld!mysqld_exit+4c (c:\buildbot\bbwin1\win-rqg-se\build\sql\mysqld.cc @ 2077)</avrf:trace>
      				<avrf:trace>mysqld!unireg_abort+54 (c:\buildbot\bbwin1\win-rqg-se\build\sql\mysqld.cc @ 2045)</avrf:trace>
      				<avrf:trace>mysqld!win_main+4b9 (c:\buildbot\bbwin1\win-rqg-se\build\sql\mysqld.cc @ 5918)</avrf:trace>
      				<avrf:trace>mysqld!mysql_service+50 (c:\buildbot\bbwin1\win-rqg-se\build\sql\mysqld.cc @ 6050)</avrf:trace>
      				<avrf:trace>mysqld!mysqld_main+313 (c:\buildbot\bbwin1\win-rqg-se\build\sql\mysqld.cc @ 6243)</avrf:trace>
      				<avrf:trace>mysqld!__tmainCRTStartup+13b (f:\dd\vctools\crt_bld\self_64_amd64\crt\src\crt0.c @ 278)</avrf:trace>
      				<avrf:trace>kernel32!BaseThreadInitThunk+d ( @ 0)</avrf:trace>
      				<avrf:trace>ntdll!RtlUserThreadStart+21 ( @ 0)</avrf:trace>
      			</avrf:stackTrace>
      		</avrf:logEntry>
      	</avrf:logSession>
      </avrf:logfile>program finished with exit code 0

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              wlad Vladislav Vaintroub
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.