MDEV-9206 : Disable malloc size callback prior to exit()

my_free() can be called for C++ static destructors after
exit(), i.e after the THR_THD used by callback is already destroyed.